src/test/ui/associated-types/issue-36499.stderr
error: expected expression, found `+`
  --> $DIR/issue-36499.rs:14:9
   |
LL |     2 + +2;
   |         ^ expected expression

error: aborting due to previous error

